--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,15 @@
             "email": "barryvdh@gmail.com"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/OmarTaherSaad/dompdf.git"
+        }
+    ],
     "require": {
         "php": "^7.2 || ^8.0",
-        "dompdf/dompdf": "^2.0.1",
+        "dompdf/dompdf": "dev-master",
         "illuminate/support": "^6|^7|^8|^9|^10"
     },
     "require-dev": {
