--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,11 @@
     "name": "barryvdh/laravel-dompdf",
     "description": "A DOMPDF Wrapper for Laravel",
     "license": "MIT",
-    "keywords": ["laravel", "dompdf", "pdf"],
+    "keywords": [
+        "laravel",
+        "dompdf",
+        "pdf"
+    ],
     "authors": [
         {
             "name": "Barry vd. Heuvel",
@@ -18,7 +22,8 @@
     "require": {
         "php": "^7.2 || ^8.0",
         "dompdf/dompdf": "dev-master",
-        "illuminate/support": "^6|^7|^8|^9|^10"
+        "illuminate/support": "^6|^7|^8|^9|^10",
+        "khaled.alshamaa/ar-php": "^6.0"
     },
     "require-dev": {
         "orchestra/testbench": "^4|^5|^6|^7|^8",
